<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">Avi</string>
    <string name="STRID_FUNC_STRS_OPTION_STAR_TRAILS">STRID_FUNC_STRS_OPTION_STAR_TRAILS</string>
    <string name="STRID_FUNC_STRS_OPTION_STAR_TRAILS_GUIDE">Adjusts the length of star trails.\nThe larger the level, the star trails seem like commet. </string>
    <string name="STRID_FUNC_STRS_MENU_ITEMS_FOCUSING_TIPS">STRID_FUNC_STRS_MENU_ITEMS_FOCUSING_TIPS</string>
    <string name="STRID_FUNC_STRS_MENU_ITEMS_BRIGHTNESS_CONTROL">STRID_FUNC_STRS_MENU_ITEMS_BRIGHTNESS_CONTROL</string>
    <string name="STRID_FUNC_STRS_MENU_ITEMS_FOCUSING_TIPS_GUIDE">Display tips guides for focusing star with manual focus.</string>
    <string name="STRID_FUNC_STRS_MENU_ITEMS_BRIGHTNESS_CONTROL_GUIDE">Sets the monitor brightness.</string>
    <string name="STRID_FUNC_STRS_BRIGHTNESS_CONTROL_ON_GUIDE">Sets darker the monitor brightness.</string>
    <string name="STRID_FUNC_STRS_BRIGHTNESS_CONTROL_OFF_GUIDE">Sets defaut the monitor brightness.</string>
    <string name="STRID_CAU_SHOOTING_ERROR_RETRY">Failed to shoot.\nShoot again.</string>
    <string name="STRID_CAU_CHANGE_STEADY_SHOT">This function is currently disabled.\nTurn off SteadyShot of lens</string>
    <string name="STRID_FUNC_STRS_REMAIN_TIME">Time Left</string>
    <string name="STRID_FUNC_CG_GUIDE_PLAY">Displays as an image index, the images that were shot with this application.</string>
    <string name="STRID_FUNC_STRS_SHOOTING_TIP_FOOTER_GUIDE_PAGE_3_SK">Prev               Enter </string>
    <string name="STRID_FUNC_STRS_BRIGHTNESS_NORMAL">Normal</string>
    <string name="STRID_FUNC_STRS_BRIGHTNESS_NORMAL_GUIDE">Sets the monitor to Normal.</string>
    <string name="STRID_AMC_STR_01036">Custom</string>
    <string name="STRID_AMC_STR_01117">Reset</string>
    <string name="STRID_AMC_STR_01187">Delete this image?</string>
    <string name="STRID_AMC_STR_01911">No memory card inserted.</string>
    <string name="STRID_AMC_STR_01869">Self-timer</string>
    <string name="STRID_AMC_STR_07143" formatted="false">%s-%s-%s %s:%s AM</string>
    <string name="STRID_AMC_STR_07144" formatted="false">%s-%s-%s %s:%s PM</string>
    <string name="STRID_CAU_CHANGE_DIAL_TO_PASM">Unavailable in this shooting mode.\nSwitch to any of P/A/S/M modes.</string>
    <string name="STRID_FUNC_TIMELAPSE_THEME">Theme Selection</string>
    <string name="STRID_FUNC_TIMELAPSE_TCUSTOM_GUIDE">Sets such items as the aperture and shutter speed and shoots.\n[Shoot Mode]: P/A/S/M</string>
    <string name="STRID_FUNC_TIMELAPSE_INTERVAL_VALUE">%2dsec</string>
    <string name="STRID_FUNC_TIMELAPSE_SHOOTINGNUM_VALUE">%3d</string>
    <string name="STRID_FUNC_TIMELAPSE_IMAGENUM">Shots</string>
    <string name="STRID_FUNC_TIMELAPSE_IMAGENUM_VALUE">%3d</string>
    <string name="STRID_FUNC_TIMELAPSE_IMAGENUM_GUIDE">Automatically shoots a set number of shots.</string>
    <string name="STRID_FUNC_TIMELAPSE_RECMODE_AVI24">Movie 24p</string>
    <string name="STRID_FUNC_TIMELAPSE_RECMODE_AVI30">Movie 30p</string>
    <string name="STRID_FUNC_TIMELAPSE_RECMODE_AVI24_GUIDE">Records as a 24-frame/sec movie (AVI).</string>
    <string name="STRID_FUNC_TIMELAPSE_RECMODE_AVI30_GUIDE">Records as a 30-frame/sec movie (AVI).</string>
    <string name="STRID_FUNC_TIMELAPSE_TIMER_OFF_GUIDE">Self-Timer: Off</string>
    <string name="STRID_FUNC_TIMELAPSE_MOVSIZE">Movie Size</string>
    <string name="STRID_FUNC_TIMELAPSE_MOVSIZE_1920_1080">1920x1080</string>
    <string name="STRID_FUNC_TIMELAPSE_MOVSIZE_1280_720">1280x720</string>
    <string name="STRID_FUNC_TIMELAPSE_MOVSIZE_1920_1080_GUIDE">Records as 1920x1080 size.</string>
    <string name="STRID_FUNC_TIMELAPSE_MOVSIZE_1280_720_GUIDE">Records as 1280x720 size.</string>
    <string name="STRID_FUNC_TIMELAPSE_RECTIME">Duration</string>
    <string name="STRID_FUNC_TIMELAPSE_CNF_1">Remaining card capacity may not\nlet you shoot the selected duration.\nCard space: %3d shots</string>
    <string name="STRID_FUNC_TIMELAPSE_INV_THEME">Invalid with the current theme.</string>
    <string name="STRID_FUNC_INV_APP">Invalid with this application.</string>
    <string name="STRID_FUNC_TIMELAPSE_NOIMAGES">There are no images that were shot\nwith this application.</string>
    <string name="STRID_FUNC_TIMELAPSE_INV_IMAGES">There are no images that can be\nplayed back.</string>
    <string name="STRID_FUNC_TIMELAPSE_IMAGENUM_AND_VALUE">Shots: %3d</string>
    <string name="STRID_FUNC_TIMELAPSE_INTERVAL_AND_VALUE">Interval: %2d sec</string>
    <string name="STRID_CAU_CONTENTS_FULL_PLS_DELETE">Total number of content in this\napplication has reached limit.\nRemove some content from this\napplication.</string>
    <string name="STRID_FUNC_TIMELAPSE_SELFTIMER_GUIDE">Changes the self-timer setting.</string>
    <string name="STRID_FUNC_TIMELAPSE_FILEFORMAT_GUIDE">Selects the file format.</string>
    <string name="STRID_FUNC_TIMELAPSE_MOVIESIZE_GUIDE">Selects the movie size.</string>
    <string name="STRID_FUNC_TIMELAPSE_SELFTIMER_2S_GUIDE">Shoots 2 seconds after pressing the shutter button.</string>
    <string name="STRID_FUNC_TIMELAPSE_SETTING_RESET_GUIDE">Resets setting value.</string>
    <string name="STRID_FUNC_TIMELAPSE_FILE_FORMAT">File Format</string>
    <string name="STRID_FUNC_TIMELAPSE_SELFTIMER_OFF_GUIDE">Will not use self-timer.</string>
    <string name="STRID_FUNC_TIMELAPSE_FOOTERGUIDE_OPTION_EXITAPP">Option Exit App.</string>
    <string name="STRID_FUNC_TIMELAPSE_FOOTERGUIDE_OPTION_EXITAPP_SK">Option Exit App.</string>
    <string name="STRID_FUNC_TIMELAPSE_OPT_FOOTER_GUIDE">Enter Cancel</string>
    <string name="STRID_FUNC_TIMELAPSE_OPT_FOOTER_GUIDE_SK">Enter Guide Cancel</string>
    <string name="STRID_FUNC_TIMELAPSE_PB_FOOTER_GUIDE">Frame Advance Play Cancel</string>
    <string name="STRID_FUNC_TIMELAPSE_PB_FOOTER_GUIDE_SK">Frame Advance Play Delete Cancel</string>
    <string name="STRID_FUNC_TIMELAPSE_PB_FOOTER_GUIDE_PAUSE">Pause</string>
    <string name="STRID_FUNC_TIMELAPSE_PB_FOOTER_GUIDE_PAUSE_SK">Pause</string>
    <string name="STRID_FUNC_TIMELAPSE_FOOTERGUIDE_OPTION_RETURN">Option </string>
    <string name="STRID_FUNC_TIMELAPSE_FOOTERGUIDE_OPTION_RETURN_SK">Option </string>
    <string name="STRID_FUNC_RICH_HELP_GUIDE_FOOTER_CONTENT_GUIDE">Back/Next </string>
    <string name="STRID_FUNC_STRS_APP_NAME">Star Trail</string>
    <string name="STRID_CAUTION_STRLS_LONG_EXPOSE_NR_BEFORE_START">Set Long Exposure NR to Off before using this application. </string>
    <string name="STRID_CAUTION_STRS_SET_TO_MF_BEFORE_START">Set Focus Mode to MF before using this application.</string>
    <string name="STRID_CAUTION_STRS_SET_TO_MF">Current Focus Mode is invalid.\nSwitch to MF.</string>
    <string name="STRID_FUNC_STRLS_INTRODUCTION_GUIDE">Welcome.\nIn this application, Focus Mode is automatically set in MF (Manual Focus) mode.\nBy utilizing the following:\nEnjoy Star Trail shooting!\n- Shooting Tips for suitable focus setting\n- Test Shot function for convenient focus check</string>
    <string name="STRID_FUNC_STRLS_THEME_BRIGHT_NIGHT">Bright Night</string>
    <string name="STRID_FUNC_STRLS_THEME_DARK_NIGHT">Dark Night</string>
    <string name="STRID_FUNC_STRLS_THEME_BRIGHT_NIGHT_GUIDE">Effective for shooting from bright place such as city lights or moonlit night.</string>
    <string name="STRID_FUNC_STRLS_THEME_DARK_NIGHT_GUIDE">Effective for shooting from a dark place where stars can be well seen in the sky.</string>
    <string name="STRID_FUNC_STRS_OPTION_STREAKS_LEVEL">Streaks</string>
    <string name="STRID_FUNC_STRS_OPTION_STREAKS_LEVELS_GUIDE">Adjusts the length of star trail streaks.\nThe larger the level, the longer the streaks.</string>
    <string name="STRID_FUNC_STRS_MENU_ITEMS_SHOOTING_TIPS">Shooting Tips</string>
    <string name="STRID_FUNC_STRS_MENU_ITEMS_MONITOR_BRIGHTNESS" />
    <string name="STRID_FUNC_STRS_MENU_ITEMS_SHOOTING_TIPS_GUIDE">Displays shooting tips for focusing star with manual focus.</string>
    <string name="STRID_FUNC_STRS_MENU_ITEMS_MONITOR_BRIGHTNESS_GUIDE" />
    <string name="STRID_FUNC_STRS_MONITOR_BRIGHTNESS_ON_GUIDE" />
    <string name="STRID_FUNC_STRS_MONITOR_BRIGHTNESS_OFF_GUIDE" />
    <string name="STRID_FUNC_STRS_LAUNCHER_NAME_2L">Star\nTrail</string>
    <string name="STRID_FUNC_STRS_LAUNCHER_GUIDE">Now you can easily create beautiful star trail movies. \nSimply choose themes and shoot a starry sky.</string>
    <string name="STRID_FUNC_SMOOTH_PHOTO_CUSTOM_GUIDE">Shoot with customizable settings such as aperture and shutter speed.\n[Shoot Mode]: P/A/S/M</string>
    <string name="STRID_FUNC_STRS_OPTION_STREAKS_FULL">FULL</string>
    <string name="STRID_FUNC_STRS_SHOOTING_TIPS_PAGE1_HEADER">How to set focus 1</string>
    <string name="STRID_FUNC_STRS_SHOOTING_TIPS_PAGE2_HEADER">How to set focus 2</string>
    <string name="STRID_FUNC_STRS_SHOOTING_TIPS_PAGE3_HEADER">Test Shot</string>
    <string name="STRID_FUNC_STRS_SHOOTING_TIPS_PAGE1_CONTENTS">Search the brightest star and set the focus targeting that star.\nUsing Focus Magnifier is effective to check the focus in detail.\n\nIf you can not find the target star in the direction you want to shoot, find the target star in other direction, set the focus, and pan the device in the direction you want to shoot.</string>
    <string name="STRID_FUNC_STRS_SHOOTING_TIPS_PAGE2_CONTENTS">Effective using largest magnification of Focus Magnifier centering the targeted star. \nBy turning the focusing ring of the lens, set the target star as clear as possible.\nWhen targeted star is hard to view, reduce the F-value (opening the aperture).\n(Theme: Custom only)\n\nRe-adjust the focus when zoom position is changed.</string>
    <string name="STRID_FUNC_STRS_SHOOTING_TIPS_PAGE3_CONTENTS">Test Shot function helps create balanced arrangement and exposure.\nAlso useful for checking the focus by enlarging the view.\n\nYou can activate Test Shot function from Focus Magnifier, MF Assist and Shooting mode.\n\nAfter the shutter release, Auto Review will activate.\nTest shot image will not be saved. </string>
    <string name="STRID_FUNC_STRS_TEST_SHOT">Test Shot</string>
    <string name="STRID_FUNC_STRS_BRIGHTNESS_DARKER">Darker</string>
    <string name="STRID_FUNC_STRS_BRIGHTNESS_DARKER_GUIDE">Sets the monitor to Darker.</string>
    <string name="STRID_FUNC_STRLS_IMAGEVIEW">Star Trail Image List</string>
    <string name="STRID_CAU_TIMELAPSE_LENS_STEADYSHOT">Use this application with SteadyShot of lens off.</string>
    <string name="STRID_FUNC_STRLS_THEME_BRIGHT_NIGHT_GUIDE2">Effective for shooting from bright place such as city lights or moonlit night.\nAdjust the brightness of images by changing exposure compensation.</string>
    <string name="STRID_FUNC_STRLS_THEME_DARK_NIGHT_GUIDE2">Effective for shooting from a dark place where stars can be well seen in the sky.\nAdjust the brightness of images by changing shutter speed and ISO sensitivity.</string>
    <string name="STRID_FUNC_RICH_HELP_GUIDE_FOOTER_CONTENT_GUIDE_SK">Back/Next </string>
    <string name="STRID_AMC_STR_00058">Off</string>
    <string name="STRID_AMC_STR_01019">File Format</string>
    <string name="STRID_AMC_STR_02150">Self-timer: 2 Sec</string>
    <string name="STRID_AMC_STR_06108" formatted="false">%2d:%02d:%02d</string>
    <string name="STRID_CAU_WILL_CHANGE_TO_P">Unavailable in this shooting mode.\nSwitches to P mode automatically in this application.</string>
    <string name="STRID_FUNC_STRS_SHOOTING_TIP_GUIDE">User can learn and confirm how to focus on star in the sky step by step, referring these guides.</string>
    <string name="STRID_FUNC_STRS_SHOOTINGNUM">Times</string>
    <string name="STRID_FUNC_STRS_MONITOR_BRIGHTNESS">Monitor Brightness</string>
    <string name="STRID_FUNC_STRS_NOLIMIT">NoLimit</string>
</resources>