<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:base="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.sony.imaging.app.startrails.shooting.widget.STImageView
        android:id="@+id/sceneselection_icon"
        android:layout_width="527px"
        android:layout_height="240px"
        android:layout_marginLeft="113px"
        android:layout_marginTop="186px"/>
    <include
        android:id="@+id/menu_sub_screen"
        layout="@layout/menu_sub_screen"/>
    <com.sony.imaging.app.base.shooting.widget.AppIconView
        android:id="@+id/app_icon"
        android:layout_width="70px"
        android:layout_height="55px"
        android:layout_marginLeft="6px"
        android:layout_marginTop="0px"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:gravity="left"
        android:id="@+id/theme_selection_title"
        android:layout_width="422px"
        android:layout_height="46px"
        android:layout_marginLeft="80px"
        android:layout_marginTop="4px"
        android:text="@string/STRID_FUNC_TIMELAPSE_THEME"
        style="@style/RESID_FONTSIZE_BIG_M_EDGE_ON"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:gravity="top|left"
        android:id="@+id/guide_view"
        android:layout_width="484px"
        android:layout_height="272px"
        android:layout_marginLeft="132px"
        android:layout_marginTop="136px"
        style="@style/RESID_FONTSIZE_STD_M_EDGE_ON"/>
    <TextView
        android:typeface="4"
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:id="@+id/shooting_time_value"
        android:layout_width="110px"
        android:layout_height="36px"
        android:layout_marginLeft="132px"
        android:layout_marginTop="360px"
        android:text="@string/STRID_AMC_STR_06108"
        style="@style/RESID_FONTSIZE_STD_M_EDGE_OFF"/>
    <com.sony.imaging.app.startrails.shooting.widget.STImageView
        android:id="@+id/theme_selection_recording_mode"
        android:layout_width="102px"
        android:layout_height="48px"
        android:layout_marginLeft="256px"
        android:layout_marginTop="354px"
        android:src="@drawable/p_16_dd_parts_tm_recordingmode_movie30p_menu_normal"/>
    <com.sony.imaging.app.startrails.shooting.widget.STImageView
        android:id="@+id/theme_selection_streak_icon"
        android:layout_width="48px"
        android:layout_height="48px"
        android:layout_marginLeft="372px"
        android:layout_marginTop="354px"
        android:src="@drawable/p_16_dd_parts_strl_option_streaks_icon"/>
    <TextView
        android:typeface="4"
        android:textColor="@color/RESID_FONTSTYLE_CMN_WHITE_NO_SKIN"
        android:id="@+id/streaklevel"
        android:layout_width="90px"
        android:layout_height="36px"
        android:layout_marginLeft="420px"
        android:layout_marginTop="361px"
        android:text="1LV"
        style="@style/RESID_FONTSIZE_STD_M_EDGE_OFF"/>
    <com.sony.imaging.app.startrails.shooting.widget.STImageView
        android:id="@+id/theme_selection_shooting_icon"
        android:layout_width="48px"
        android:layout_height="48px"
        android:layout_marginLeft="484px"
        android:layout_marginTop="354px"
        android:src="@drawable/p_16_dd_parts_tm_shootingnum_icon_small_nomal"/>
    <TextView
        android:typeface="4"
        android:textColor="@color/RESID_FONTSTYLE_CMN_WHITE_NO_SKIN"
        android:id="@+id/theme_selection_shooting_num"
        android:layout_width="50px"
        android:layout_height="36px"
        android:layout_marginLeft="532px"
        android:layout_marginTop="360px"
        android:text="780"
        style="@style/RESID_FONTSIZE_STD_M_EDGE_OFF"/>
    <com.sony.imaging.app.base.common.widget.FooterGuide
        android:id="@+id/footer_guide_theme_select"
        android:background="0x1080a15"
        android:layout_width="640px"
        android:layout_height="60px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="420px"
        base:group="footer"
        base:guide_text_style="@attr/footer_guide"
        base:guide_text_marginLeft="8px"
        base:guide_text_marginTop="10px"
        base:guide_text_width="624px"
        base:guide_text_height="40px"
        base:guide_text_p1="@string/STRID_FUNC_TIMELAPSE_FOOTERGUIDE_OPTION_EXITAPP"
        base:guide_text_emt="@string/STRID_FUNC_TIMELAPSE_FOOTERGUIDE_OPTION_EXITAPP_SK"/>
</RelativeLayout>
