<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:base="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.sony.imaging.app.startrails.shooting.widget.STImageView
        android:background="@drawable/p_16_dd_parts_tm_option_background"
        android:layout_width="640px"
        android:layout_height="480px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="0px"/>
    <com.sony.imaging.app.base.shooting.widget.AppIconView
        android:id="@+id/app_icon"
        android:layout_width="70px"
        android:layout_height="55px"
        android:layout_marginLeft="6px"
        android:layout_marginTop="0px"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:id="@+id/theme_name"
        android:layout_width="422px"
        android:layout_height="46px"
        android:layout_marginLeft="80px"
        android:layout_marginTop="4px"
        android:text="Standard"
        style="@style/RESID_FONTSIZE_BIG_M_EDGE_ON"/>
    <com.sony.imaging.app.startrails.shooting.widget.STImageButton
        android:id="@+id/st_reset_button"
        android:background="@null"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:layout_width="100px"
        android:layout_height="42px"
        android:layout_marginLeft="531px"
        android:layout_marginTop="7px"
        android:src="@drawable/p_16_dd_parts_tm_reset_normal"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:id="@+id/rec_mode_name"
        android:layout_width="304px"
        android:layout_height="42px"
        android:layout_marginLeft="8px"
        android:layout_marginTop="93px"
        android:text="@string/STRID_FUNC_TIMELAPSE_FILE_FORMAT"
        style="@style/RESID_FONTSIZE_BIG_M_EDGE_ON"/>
    <com.sony.imaging.app.startrails.shooting.widget.STImageButton
        android:id="@+id/mpeg_24_btn"
        android:background="@null"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:layout_width="102px"
        android:layout_height="48px"
        android:layout_marginLeft="423px"
        android:layout_marginTop="85px"/>
    <com.sony.imaging.app.startrails.shooting.widget.STImageButton
        android:id="@+id/mpeg_24_btn_bg"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:layout_width="60px"
        android:layout_height="7px"
        android:layout_marginLeft="444px"
        android:layout_marginTop="128px"/>
    <com.sony.imaging.app.startrails.shooting.widget.STImageButton
        android:id="@+id/mpeg_30_btn"
        android:background="@null"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:layout_width="102px"
        android:layout_height="48px"
        android:layout_marginLeft="529px"
        android:layout_marginTop="85px"/>
    <com.sony.imaging.app.startrails.shooting.widget.STImageButton
        android:id="@+id/mpeg_30_btn_bg"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:layout_width="60px"
        android:layout_height="7px"
        android:layout_marginLeft="550px"
        android:layout_marginTop="128px"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:id="@+id/shooting_num_name"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:layout_width="170px"
        android:layout_height="42px"
        android:layout_marginLeft="8px"
        android:layout_marginTop="168px"
        android:text="@string/STRID_FUNC_TIMELAPSE_IMAGENUM"
        style="@style/RESID_FONTSIZE_BIG_M_EDGE_ON"/>
    <com.sony.imaging.app.startrails.shooting.widget.STImageView
        android:background="@drawable/p_16_dd_parts_tm_shootingnum_indicator"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:layout_width="462px"
        android:layout_height="64px"
        android:layout_marginLeft="178px"
        android:layout_marginTop="148px"/>
    <com.sony.imaging.app.startrails.shooting.widget.STSeekBar
        android:id="@+id/shooting_num_bar_normal"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:layout_width="433px"
        android:layout_height="10px"
        android:layout_marginLeft="192px"
        android:layout_marginTop="192px"
        android:layout_marginRight="19px"
        android:max="990"
        android:progressDrawable="@drawable/layer_list_shooting_num_bar"
        android:thumb="@null"/>
    <com.sony.imaging.app.startrails.shooting.widget.STSeekBar
        android:id="@+id/shooting_num_bar_focused"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:layout_width="433px"
        android:layout_height="10px"
        android:layout_marginLeft="192px"
        android:layout_marginTop="192px"
        android:layout_marginRight="19px"
        android:max="990"
        android:progressDrawable="@drawable/layer_list_interval_bar"
        android:thumb="@null"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:id="@+id/streakname"
        android:layout_width="170px"
        android:layout_height="42px"
        android:layout_marginLeft="8px"
        android:layout_marginTop="233px"
        android:text="@string/STRID_FUNC_STRS_OPTION_STREAKS_LEVEL"
        style="@style/RESID_FONTSIZE_BIG_M_EDGE_ON"/>
    <ImageView
        android:id="@+id/seek_back"
        android:layout_width="462px"
        android:layout_height="64px"
        android:layout_marginLeft="178px"
        android:layout_marginTop="213px"
        android:src="@drawable/p_16_dd_parts_strl_option_streaks_gauge_base_icon"/>
    <ImageView
        android:layout_gravity="center_vertical"
        android:id="@+id/streak_bar"
        android:background="@drawable/p_16_dd_parts_tm_grayout"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:layout_width="wrap_content"
        android:layout_height="10px"
        android:layout_marginLeft="192px"
        android:layout_marginTop="257px"
        android:src="@drawable/state_streak_progress_1_selector"/>
    <ImageView
        android:layout_gravity="center_vertical"
        android:id="@+id/streak_bar_star"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="210px"
        android:layout_marginTop="241px"
        android:src="@drawable/state_streak_num_thumb"/>
    <com.sony.imaging.app.startrails.shooting.widget.STImageView
        android:gravity="left"
        android:id="@+id/interval_icon"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:layout_width="48px"
        android:layout_height="48px"
        android:layout_marginLeft="8px"
        android:layout_marginTop="301px"
        android:src="@drawable/p_16_dd_parts_strl_option_streaks_icon"/>
    <TextView
        android:typeface="4"
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:id="@+id/streakValue"
        android:layout_width="90px"
        android:layout_height="42px"
        android:layout_marginLeft="59px"
        android:layout_marginTop="304px"
        android:text="10 sec"
        style="@style/RESID_FONTSIZE_BIG_M_EDGE_ON"/>
    <com.sony.imaging.app.startrails.shooting.widget.STImageView
        android:id="@+id/shooting_num_icon"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:layout_width="48px"
        android:layout_height="48px"
        android:layout_marginLeft="8px"
        android:layout_marginTop="349px"
        android:src="@drawable/p_16_dd_parts_tm_shootingnum_icon_small_nomal"/>
    <TextView
        android:typeface="4"
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:id="@+id/shooting_num_value"
        android:layout_width="56px"
        android:layout_height="42px"
        android:layout_marginLeft="59px"
        android:layout_marginTop="352px"
        android:text="240"
        style="@style/RESID_FONTSIZE_BIG_M_EDGE_ON"/>
    <com.sony.imaging.app.startrails.shooting.widget.STImageView
        android:id="@+id/playback_image_view"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:layout_width="48px"
        android:layout_height="48px"
        android:layout_marginLeft="130px"
        android:layout_marginTop="349px"
        android:src="@drawable/p_16_dd_parts_tm_playbacktime_icon_small_nomal"/>
    <TextView
        android:typeface="4"
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:id="@+id/playback_value"
        android:layout_width="100px"
        android:layout_height="42px"
        android:layout_marginLeft="181px"
        android:layout_marginTop="352px"
        android:text="41 sec"
        style="@style/RESID_FONTSIZE_BIG_M_EDGE_ON"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:gravity="right"
        android:id="@+id/shooting_time_title"
        android:layout_width="167px"
        android:layout_height="46px"
        android:layout_marginLeft="308px"
        android:layout_marginTop="348px"
        android:text="@string/STRID_FUNC_TIMELAPSE_RECTIME"
        style="@style/RESID_FONTSIZE_BIG_M_EDGE_ON"/>
    <TextView
        android:typeface="4"
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:id="@+id/shooting_time_value"
        android:layout_width="140px"
        android:layout_height="46px"
        android:layout_marginLeft="487px"
        android:layout_marginTop="348px"
        android:text="@string/STRID_AMC_STR_06108"
        style="@style/RESID_FONTSIZE_BIG_L_EDGE_ON"/>
    <com.sony.imaging.app.base.common.widget.FooterGuide
        android:id="@+id/footer_guide_theme_option"
        android:background="0x1080a15"
        android:layout_width="640px"
        android:layout_height="60px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="420px"
        base:group="footer"
        base:guide_text_style="@attr/footer_guide"
        base:guide_text_marginLeft="8px"
        base:guide_text_marginTop="10px"
        base:guide_text_width="624px"
        base:guide_text_height="40px"
        base:guide_text_p1="@string/STRID_FUNC_TIMELAPSE_OPT_FOOTER_GUIDE"
        base:guide_text_emt="@string/STRID_FUNC_TIMELAPSE_OPT_FOOTER_GUIDE_SK"/>
</RelativeLayout>
