<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:base="http://schemas.android.com/apk/res-auto"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/appicon"
        android:layout_width="70px"
        android:layout_height="55px"
        android:layout_marginLeft="6px"
        android:layout_marginTop="0px"
        android:src="@drawable/p_16_dd_parts_strl_appicon"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:id="@+id/menu_screen_title"
        android:layout_width="422px"
        android:layout_height="46px"
        android:layout_marginLeft="80px"
        android:layout_marginTop="4px"
        style="@style/RESID_FONTSIZE_BIG_L_EDGE_OFF"/>
    <ImageView
        android:id="@+id/page_no_one"
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_marginLeft="260px"
        android:layout_marginTop="77px"
        android:src="@drawable/p_16_dd_parts_lvg_param_box_other_position_circle"/>
    <ImageView
        android:id="@+id/page_no_two"
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_marginLeft="310px"
        android:layout_marginTop="77px"
        android:src="@drawable/p_16_dd_parts_lvg_param_box_other_position_circle"/>
    <ImageView
        android:id="@+id/page_no_three"
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_marginLeft="360px"
        android:layout_marginTop="77px"
        android:src="@drawable/p_16_dd_parts_lvg_param_box_other_position_circle"/>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="300px"
        android:layout_marginTop="113px"
        android:fadeScrollbars="false">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="484px"
                android:layout_height="match_parent"
                android:layout_marginLeft="78px">
                <TextView
                    android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
                    android:id="@+id/descriptiontext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/STRID_FUNC_STRLS_INTRODUCTION_GUIDE"
                    style="@style/RESID_FONTSIZE_STD_L_EDGE_OFF"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="38px">
                <ImageView
                    android:id="@+id/image_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/p_16_dd_parts_strl_shooting_tips_contents2_1"/>
                <ImageView
                    android:id="@+id/image_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="38px"
                    android:src="@drawable/p_16_dd_parts_strl_shooting_tips_contents2_1"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.sony.imaging.app.base.common.widget.FooterGuide
        android:id="@+id/footer_guide_shooting_tip"
        android:layout_width="640px"
        android:layout_height="60px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="420px"
        base:group="footer"
        base:guide_text_style="@attr/footer_guide"
        base:guide_text_marginLeft="8px"
        base:guide_text_marginTop="10px"
        base:guide_text_width="624px"
        base:guide_text_height="40px"
        base:guide_text_p1="@string/STRID_FUNC_TIMELAPSE_OPT_FOOTER_GUIDE"
        base:guide_text_emt="@string/STRID_FUNC_TIMELAPSE_OPT_FOOTER_GUIDE_SK"/>
</RelativeLayout>
